feat: create documentatation swagger for login and register
